--- a/outsourcing-html/detail.html
+++ b/outsourcing-html/detail.html
@@ -158,7 +158,7 @@
     var id = window.location.href.split("?id=")[1];
     sync_info($("person"), $("info"), $("option"), function () {
         sendAjax("post", "project_info", "id=" + id, function (response) {
-            initFirebase();
+            // initFirebase();
             var json = JSON.parse(response);
             $("prj_info").children[1].innerText += json.prjname;
             $("prj_info").children[2].innerText += translate_ctg(json.tag) + "-" + translate_subctg(json.tag, json.subtag);
@@ -314,9 +314,21 @@
     });
 
     function examine(a, fileid) {
-        sendAjax("post", "examine", "id=" + fileid + "&action=" + a, function (response) {
-            if (response == "success")
-                notify("递交成功");
+        axios({
+  methods: 'post',
+  url: 'examine',
+  data: {
+  id: fileid,
+  action:a,
+  }
+  .then(function (response) {
+    if(response='succeess')
+    notify("递交成功");
+  })
+  .catch(function (error) {
+    console.log(error);
+  })
+       
         });
     }
 </script>
