--- a/outsourcing-vue/public/index.html
+++ b/outsourcing-vue/public/index.html
@@ -10,7 +10,7 @@
   <title>人力和项目服务平台</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+  <script type="text/javascript" src="https://cdn.goeasy.io/goeasy-1.0.3.js"></script>
   <link rel="manifest" href="/manifest.json">
 </head>
 
